--- a/miscellaneous.html
+++ b/miscellaneous.html
@@ -37,6 +37,9 @@
 			IEEE International Conference on Fuzzy Systems (FUZZ-IEEE)
 		</p></li>
 		<li><p>
+			Conference on Computer Vision and Pattern Recognition (CVPR)
+		</p></li>
+		<li><p>
 			International Joint Conference on Neural Networks (IJCNN)
 		</p></li>
         </ul>
