--- a/publication.html
+++ b/publication.html
@@ -31,23 +31,7 @@
                 <b>Z. Fang</b>, J. Lu, F. Liu, G. Zhang.<br>
                 Semi-supervised Heterogeneous Domain Adaptation: Theory and Algorithms.<br>
                 <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=34" target="_blank"><i>IEEE Transactions on Pattern Analysis and Machine Intelligence</i></a>, Under Review (Second Round), 2021 (ERA&CORE <b>A*</b>).
-                <!--[ <a href="https://arxiv.org/pdf/2006.13022" target="_blank">arXiv</a> ]-->
             </p></li>
-			<!-- <li><p>
-                <b>F. Liu</b>, J. Lu, A. Liu and G. Zhang.<br>
-                Discrepancy of Diverse Subsets for Distribution Comparison.<br>
-                <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=34" target="_blank"><i>IEEE Transactions on Pattern Analysis and Machine Intelligence</i></a>, Under Review, 2018 (ERA <b>A*</b>).
-            </p></li>
-            <li><p>
-                <b>F. Liu</b>, Z. Fang, J. Lu and G. Zhang.<br>
-                Maximum Local Discrepancy: A Non-parametric Two Sample Test.<br>
-                <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=5962385" target="_blank"><i>IEEE Transactions on Neural Networks and Learning Systems</i></a>, Under Review, 2019 (ERA&CORE <b>A*</b>).
-            </p></li> 
-            <li><p>
-                <b>F. Liu</b>, J. Lu and G. Zhang.<br>
-                A Knowledge-Ensemble Framework for Heterogeneous Unsupervised Domain Adaptation.<br>
-                <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=5962385" target="_blank"><i>IEEE Transactions on Neural Networks and Learning Systems</i></a>, Under Review (ERA&CORE <b>A*</b>).
-            </p></li>-->
 		<li><p>
                 F.Gu, J. Lu, <b>Z. Fang</b> and G.Zhang.<br>
                 Neighbor-Searching Discrepancy-based Real Concept Drift.<br>
@@ -63,6 +47,8 @@
                 J. Dong<sup>&#8224</sup>, <b>Z. Fang</b><sup>&#8224</sup>, A. Liu, G. Sun and T. Liu.<br>
                 Confident Anchor-Induced Multi-Source Free Domain Adaptation.<br>
                 In <a href="https://neurips.cc/Conferences/2021/" target="_blank"><i>Advances in Neural Information Processing Systems (NeurIPS 2021)</i></a>, Accepted, 2021 (CORE <b>A*</b>).<br>
+		[ <a href="https://proceedings.neurips.cc/paper/2021/file/168908dd3227b8358eababa07fcaf091-Paper.pdf">Link</a> ]
+                [ <a href="https://github.com/Learning-group123/CAiDA" target="_blank">CODE</a> ]   
             </p></li> 
             <li><p>
                <b>Z. Fang</b><sup>&#8224</sup>, J. Lu, A. Liu<sup>&#8224</sup>, F. Liu, G. Zhang.<br>
