--- a/publication.html
+++ b/publication.html
@@ -78,6 +78,13 @@
                 Budapest, Hungary, July 14-19, 2019 (CORE <b>A</b>).<br>
                 [ <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=8851777" target="_blank">link</a> ]
 	    </p></li>
+		<li><p>
+                J. Dong<sup>&#8224</sup>, <b>Z. Fang</b><sup>&#8224</sup>, A. Liu, G. Sun and T. Liu.<br>
+                Confident Anchor-Induced Multi-Source Free Domain Adaptation.<br>
+                In <a href="https://neurips.cc/Conferences/2021/" target="_blank"><i>Advances in Neural Information Processing Systems (NeurIPS 2021)</i></a>, Accepted, 2021 (CORE <b>A*</b>).<br>
+		[ <a href="https://proceedings.neurips.cc/paper/2021/file/168908dd3227b8358eababa07fcaf091-Paper.pdf">Link</a> ]
+                [ <a href="https://github.com/Learning-group123/CAiDA" target="_blank">CODE</a> ]   
+            </p></li> 
         </ol>
     </div>
 
