--- a/miscellaneous.html
+++ b/miscellaneous.html
@@ -42,6 +42,9 @@
 		<li><p>
 			International Joint Conference on Neural Networks (IJCNN)
 		</p></li>
+		<li><p>
+			International Conference on Machine Learning (ICML)
+		</p></li>
         </ul>
 		<h3>Journal Reviewers</h3>
         <ul>
