--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <table class="imgtable"><tr valign="top">
         <td><img src="Zhen_Fang.jpeg" alt="Zhen Fang" height="165" width="155" /></td>
         <td align="left">
-            <p><span style="font-size: 110%"><b>Zhen Fang, Ph.D.</b></span></p>
+            <p><span style="font-size: 110%"><b>Dr. Zhen Fang</b></span></p>
             <p>
                 Postdoctoral Research Associate @ DeSI Lab,<br>
                 <a href="https://www.uts.edu.au/research-and-teaching/our-research/centre-artificial-intelligence" target="_blank">
