--- a/publication.html
+++ b/publication.html
@@ -31,7 +31,7 @@
                 Y. Luo, Z. Chen,  <b>Z. Fang</b>, Z. Zhang, Z. Huang, M. Baktashmotlagh.<br>
                 KECOR: Kernel Coding Rate Maximization for Active 3D Object Detection.<br>
                 In <a href="https://iccv2023.thecvf.com/" target="_blank"><i>International Conference on Computer Vision (ICCV 2023)</i></a>, to appear (CORE <b>A*</b>).<br>
-                [ <a href="https://fang-zhen.github.io/publication.html" target="_blank">arXiv</a> ]
+                [ <a href="https://arxiv.org/abs/2307.07942" target="_blank">arXiv</a> ]
                 [ <a href="https://fang-zhen.github.io/publication.html" target="_blank">CODE</a>]
             </p></li>
 		<li><p>
