--- a/publication.html
+++ b/publication.html
@@ -126,6 +126,13 @@
     <div>
         <h2><hr><a name="journal"></a>Published Journal Articles (Selected)</h2>
         <ol><li><p>
+                <b>Z. Fang</b>, Y. Li, F. Liu, B. Han, J. Lu.<br>
+                On the Learnability of Out-of-distribution Detection.<br>
+                <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=34" target="_blank"><i>Journal of Machine Learning Research</i></a>, Published Online, 2024 (ERA&CORE <b>A*</b>).<br>
+                 [ <a href="https://www.jmlr.org/papers/volume25/23-1257/23-1257.pdf" target="_blank">Link</a> ]
+		 [ <a href="https://www.jmlr.org/papers/volume25/23-1257/23-1257.pdf" target="_blank">CODE</a> ]
+            </p></li>
+		<li><p>
                 <b>Z. Fang</b>, J. Lu, F. Liu, G. Zhang.<br>
                 Semi-supervised Heterogeneous Domain Adaptation: Theory and Algorithms.<br>
                 <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=34" target="_blank"><i>IEEE Transactions on Pattern Analysis and Machine Intelligence</i></a>, Published Online, 2022 (ERA&CORE <b>A*</b>).<br>
