--- a/publication.html
+++ b/publication.html
@@ -27,7 +27,13 @@
     
     <div>
         <h2><hr><a name="conference"></a>Conference Papers (Selected)</h2>
-        <ol>
+        <ol><li><p>
+                B. Peng, J. Lu, Y. Zhang, G. Zhang, <b>Z. Fang</b>.<br>
+               	Distributional Prototype Learning for Out-of-distribution Detection.<br>
+                 In <a href="https://icml.cc/" target="_blank"><i>31st SIGKDD Conference on Knowledge Discovery and Data Mining (KDD 2025)</i></a>, Accepted, 2024  (CORE <b>A*</b>).<br>
+                [ <a href="https://openreview.net/pdf?id=91QmrfztSP" target="_blank">Openreview</a> ]
+                [ <a href="https://openreview.net/pdf?id=91QmrfztSP" target="_blank">CODE</a>]
+            </p></li>
 		<li><p>
                 B. Peng, <b>Z. Fang</b><sup>✉</sup>, G. Zhang, J. Lu.<br>
                 Knowledge Distillation with Auxiliary Variable.<br>
